--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	     <div class="row">
 	       <div class="col-md-12 header">
 	        <div class="col-md-6 header-title">
-	        	<h1>Banha Cofee Shops</h1>
+	        	<h1>favourite Cofee Shops</h1>
 	        </div>
 	        <!-- search part -->
 		    <div class="col-md-6 search">
-		       <input  type="text" class="search-box" data-bind="textInput: searchItem" placeholder="Search Here">
+		       <input  type="text" class="search-box" size="20"  data-bind="textInput: searchItem" placeholder="Search your cofee">
 		    </div>
 		   </div>
 		    <div class="col-md-9">
@@ -26,7 +26,7 @@
             		    <!-- start list part -->
 		    <div class="col-md-3">
 		       <ul id="cofeesList" data-bind="foreach: filteredCofee">
-		         <li class="items-list" data-bind="text: title, click: $parent.clickMarker"></li>
+		         <li class="items-list" data-bind="text: title, click:$root.clickHandler"></li>
 		       </ul>
 		    </div>
 	     </div>	
@@ -34,11 +34,11 @@
 
     <!-- SCRIPTS  -->
 	<!-- <script src='js/knockout-3.2.0.js'></script> -->
+	<script src='js/jquery.min.js'></script>
 	<script src='js/knockout.js'></script>
-	<script src='js/jquery-1.12.0.min.js'></script>
 	<script src='js/bootstrap.min.js'></script>
 	<script src='js/app.js'></script> 
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8Y_t0Z1wyZn65D1ha3Argd53gqztbeUU&callback=startMap">
+	      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8Y_t0Z1wyZn65D1ha3Argd53gqztbeUU&callback=startMap">
     </script>
 </body>
 </html>
