--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<script src='js/knockout.js'></script>
 	<script src='js/bootstrap.min.js'></script>
 	<script src='js/app.js'></script> 
-	      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8Y_t0Z1wyZn65D1ha3Argd53gqztbeUU&callback=startMap">
+	      <script  async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8Y_t0Z1wyZn65D1ha3Argd53gqztbeUU&callback=MapInit">
     </script>
 </body>
 </html>
