--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- SCRIPTS  -->
 	<!-- <script src='js/knockout-3.2.0.js'></script> -->
 	<script src='js/jquery.min.js'></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src='js/knockout.js'></script>
 	<script src='js/bootstrap.min.js'></script>
 	<script src='js/app.js'></script> 
